LU-68 Fix a race between lock cancel and write

A race in osc_lock_detach due to disconnect between reading
kms from lock resource and write updating kms in the resource
could lead to loss of the update.
Lock the object across entire kms access to avert the issue.

Change-Id: I4b15e611b91b7a4a6b69f5c9fa9b6bd0a1f8cac9
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/327
Tested-by: Hudson
Reviewed-by: wangdi <di.wang@whamcloud.com>
Reviewed-by: Jinshan Xiong <jay@whamcloud.com>